tests/machine/x/rust/string_in_operator.rs
fn main() {
    let mut s = "catch";
    println!("{:?}", "cat" in s);
    println!("{:?}", "dog" in s);
}
